--- a/assets/jd-custom.css.liquid
+++ b/assets/jd-custom.css.liquid
@@ -32,6 +32,17 @@
     custom per theme
 ============================================================================ **/
 
+.footer__logo {
+    padding-top: 95px;
+}
+  
+.footer__social.unstyled.inline-list {
+  justify-content: center;
+}
+  
+.site-footer {
+    text-align: center;
+}
 
 /* More General */
 .text-color-primary {
