--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -30,7 +30,7 @@
 
       {% case section.blocks.size %}
         {% when 1 %}
-          {% assign footer_column_width = 'large-up--one-half' %}
+          {% assign footer_column_width = 'large-up--one-whole' %}
         {% when 2 %}
           {% assign footer_column_width = 'medium-up--one-half' %}
         {% when 3 %}
