--- a/assets/jd-custom.css.liquid
+++ b/assets/jd-custom.css.liquid
@@ -31,7 +31,11 @@
 /** ============================================================================
     custom per theme
 ============================================================================ **/
-
+div.product-description.rte p span, p, .p {
+  line-height:1.2rem!important;
+    margin: 0.5em 0 1.5em !important;
+}
+  
 .footer__logo {
     padding-top: 95px;
 }
