--- a/assets/theme.css
+++ b/assets/theme.css
@@ -57,3 +57,8 @@ justify-content: center;
   background-repeat: no-repeat!important;
   background-size: cover!important;
 }
+
+div.product-description.rte > p > span {
+  line-height:1.4rem!important;
+    margin: 0.5em 0 1.5em!important;
+}
